# langgraph_a2a_adapters

./: .env.sample  .gitignore  README.md  pyproject.toml
changelog/: langgraph-a2a-adapters_0_0_3.md  langgraph-a2a-adapters_0_0_4.md
docs/: README_CN.md  README_EN.md  README_JP.md
examples/: client.ipynb
examples/dynamic_agent/: __init__.py  a2a_agent.py  agent.py
examples/search_agent/: __init__.py  a2a_agent.py  agent.py
examples/text_to_sql/: AGENTS.md  __init__.py  a2a_agent.py  agent.py  tools.py
examples/text_to_sql/skills/query-writing/: SKILL.md
examples/text_to_sql/skills/schema-exploration/: SKILL.md
src/langgraph_a2a_adapters/: __init__.py  adapter.py  config.py  decorators.py  executor.py
