[project]
name = "langgraph-a2a-adapters"
version = "0.0.4"
description = "LangGraph to Google A2A Protocol Adapter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "BAEM1N", email = "baem1n@users.noreply.github.com"}
]
keywords = ["langgraph", "a2a", "agent", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "a2a-sdk[http-server]",
    "langgraph",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/BAEM1N/langgraph_a2a_adapters"
Repository = "https://github.com/BAEM1N/langgraph_a2a_adapters"
Issues = "https://github.com/BAEM1N/langgraph_a2a_adapters/issues"

[project.optional-dependencies]
examples = [
    "deepagents",
    "httpx",
    "jupyter",
    "langchain-community",
    "langchain-openai",
    "langchain-tavily",
    "langfuse",
    "python-dotenv",
]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_a2a_adapters"]
